# solana-voting-app-substreams

./: .gitignore  Cargo.toml  buf.gen.yaml  generator.json  substreams.yaml
idls/: program.json
proto/: program.proto
src/: lib.rs
src/pb/: substreams.v1.program.rs
subgraph/: package-lock.json  package.json  subgraph.yaml
subgraph/src/: mappings.ts
subgraph/src/pb/substreams/v1/program/: Data.ts  InitializeCandidate.ts  InitializePoll.ts  Vote.ts
