[package]
name = "my_project"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-solana = "0.14"
substreams-solana-program-instructions = "0.2"
anchor-lang = ">=0.30.1"
sologger_log_context = "0.1.2"
base64 = "0.22.1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
